<resources>
    <string name="app_name">2ndProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- errorMsg -->
    <string name="error_input"> 입력해주세요.</string>
    <string name="error_input_info">정보를 입력해주세요.</string>
    <string name="error_not_regular"> 형식에 맞지 않습니다.</string>

    <string name="regular_id">영문, 숫자 포함 3~12자</string>
    <string name="regular_password">영문, 숫자, 특수기호 포함 8~12자</string>
    <string name="error_not_regular_nickname">2글자 이상의 닉네임을 입력해주세요.</string>
    <string name="error_not_resident_number">올바르지 않은 주민등록번호입니다.</string>

    <string name="fail_server">네트워크 오류입니다.</string>

    <!-- home tab -->
    <string name="home_tab_create_title">간편한 입출금통장</string>
    <string name="home_tab_create_content">통장과 체크카드를 한번에!</string>
    <string name="home_tab_connect_title">오픈뱅킹 서비스</string>
    <string name="home_tab_connect_content">신한은행 계좌 없이도 다른은행 계좌 조회,\n이체를 신한 쏠에서 편하게!</string>
    <string name="home_tab_connect_button">다른은행 계좌 등록하기</string>

    <string name="banking">뱅킹</string>
    <string name="life">라이프</string>
    <string name="start">시작하기</string>
    <string name="input_pin_number">핀번호를 입력해주세요.</string>
    <string name="delete">삭제</string>
    <string name="register">가입하기</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="double_check">중복확인</string>
    <string name="nickname">닉네임</string>
    <string name="sign_up">회원가입</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="name">이름(실명)</string>
    <string name="confirm">확인</string>
    <string name="transfer">송금하기</string>
    <string name="won">원</string>
    <string name="input_account_name">계좌 별명 입력</string>
    <string name="login">로그인</string>

    <string name="format_money">%,d원</string>
    <string name="format_money_comma">%,d</string>

    <string name="server_res_success">available</string>
    <string name="server_res_fail">exist</string>
    <string name="cancel">취소</string>
</resources>