<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.a2ndproject.ui.viewmodel.fragment.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.fragment.SignUpFirstFragment">

        <TextView
            android:id="@+id/textView28"
            style="@style/SignTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id"
            app:layout_constraintBottom_toBottomOf="@+id/et_layout_id_view_pager_item_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_layout_id_view_pager_item_sign_up" />

        <TextView
            android:id="@+id/textView29"
            style="@style/SignTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintBottom_toBottomOf="@+id/et_layout_password_view_pager_item_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_layout_id_view_pager_item_sign_up" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_id_view_pager_item_sign_up"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Sign"
            setError="@{vm.idError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_layout_password_view_pager_item_sign_up"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_id_view_pager_item_sign_up"
                style="@style/Widget.AppCompat.EditText.Sign"
                android:afterTextChanged="@{(text)->vm.setIdError(text)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="80dp"
                android:text="@={vm.id}"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_layout_password_view_pager_item_sign_up"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Sign"
            setError="@{vm.passwordError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView29"
            app:layout_constraintTop_toBottomOf="@+id/et_layout_id_view_pager_item_sign_up">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_view_pager_item_sign_up"
                style="@style/Widget.AppCompat.EditText.Sign"
                android:afterTextChanged="@{(text)->vm.setPasswordError(text)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={vm.password}"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_id_double_check_view_pager_item_sign_up"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:enabled="@{vm.idError.length() == 0 &amp;&amp; vm.id.length() != 0 ? true : false}"
            android:onClick="@{() -> vm.checkId()}"
            android:text="@string/double_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_layout_id_view_pager_item_sign_up" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
