<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.a2ndproject.ui.viewmodel.fragment.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/motion_login_basic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/login_basic_fragment_xml_constraintlayout_scene"
        tools:context=".ui.view.fragment.LoginBasicFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Sign"
            setError="@{vm.idErr}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_textInputLayout_marginStart"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textView38">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.AppCompat.EditText.Sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.id}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Sign"
            setError="@{vm.pwErr}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sign_textInputLayout_marginStart"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/layout_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView36"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.AppCompat.EditText.Sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={vm.pw}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView36"
            style="@style/SignTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textView37"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout2" />

        <TextView
            android:id="@+id/textView37"
            style="@style/SignTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_padding"
            android:text="@string/id"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

        <TextView
            android:id="@+id/textView38"
            style="@style/BigTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_padding_big"
            android:gravity="center"
            android:text="아이디와 비밀번호를\n입력해주세요."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.BottomBlueButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.login()}"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView29"
            style="@style/RegularTextView"
            setVisible="@{vm.errMsg.length() != 0}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@{vm.errMsg}"
            android:textColor="@color/error"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/button3"
            tools:text="asdfsdaf" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>